POM: add hack to make IntelliJ happy
Co-authored-by: Gabriel Selzer <gjselzer@wisc.edu>